# learngit

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  HmiCore.sln  build.sh  pcbuild.sh  precompile.cmd
HmiPart/HmiComm/: CMakeLists.txt  HmiComm.vcxproj  HmiComm.vcxproj.filters
HmiPart/HmiComm/include/: CerealCommon.hpp  CerealCommoncpp.hpp  Comm.h  CompileInfo.h  Constant.h  DeleteHelper.h  HMIVersion.h  IHmiThread.h  Logger.h  MemoryStream.h  OutTimeClock.h  RingBuffer.h  RunEnv.h  Semaphore.h  StackArray.h  Sysdef.h  VersionMgr.h  resource.h  stdafx.h  targetver.h  version.h
HmiPart/HmiComm/src/: ConvertUTF.c  DeleteHelper.cpp  Logger.cpp  RunEnv.cpp  Semaphore.cpp  VersionMgr.cpp  version.cpp
HmiPart/HmiUIManager/: CMakeLists.txt  HmiUIManger.vcxproj  HmiUIManger.vcxproj.filters
HmiPart/HmiUIManager/include/: BaseControl.h  BaseGControl.h  BaseModel.h  BasicView.h  BinBitmap.h  GHMIPage.h  GlobalWindow.h  HMIBaseView.h  HMIPage.h  HMISocket.h  HMIWindow.h  IControlFactory.h  IDataService.h  IPageFactory.h  IPermission.h  IResourceService.h  LocalData.h  ModalPage.h  ModuleAssemble.h  ResourceService.h  UIComm.h  UIDataService.h  UIManager.h  UIThread.h  UsrPermission.h  XJMacro.h
HmiPart/HmiUIManager/src/: BaseControl.cpp  BaseGControl.cpp  GHMIPage.cpp  GlobalWindow.cpp  HMIPage.cpp  HMIWindow.cpp  IControlFactory.cpp  IPageFactory.cpp  ModalPage.cpp  UIManager.cpp  UIThread.cpp
HmiPart/HmiUIManager/src/Data/: UIDataService.cpp  UIDataSrvThread.cpp
HmiPart/HmiUIManager/src/Macro/: XJMacro.cpp
HmiPart/HmiUIManager/src/Resource/: IResourceService.cpp  ResourceService.cpp
HmiPart/HmiUIManager/src/Secure/: IPermission.cpp  UsrPermission.cpp
HmiPart/HmiUIManager/src/Tools/: BinBitmap.cpp
HmiPart/Project/: CMakeLists.txt  Project.vcxproj  Project.vcxproj.filters
HmiPart/Project/include/: AdvanceActionMode.h  AdvanceFuncConfig.h  AdvanceFuncRes.h  AlarmBarConfig.h  AlarmDisplayConfig.h  AlarmInfoRes.h  AlarmInputConfig.h  AlarmSeekUnit.h  AlarmTableUnit.h  AlarmWinConfig.h  BackLightConfig.h  BarCodeConfig.h  BaseBuilderCls.h  BaseDisplayUnit.h  BaseFunc.h  BaseLine.h  BaseOpUnit.h  BasePerm.h  BaseStyle.h  BaseUnit.h  BaseVar.h  BorderRes.h  BtnFunctionConfig.h  BtnFunctionRes.h  BtnUnit.h  BuzzerConfig.h  CHirePurchase.h  Cell.h  CharacterDisplayConfig.h  CharacterInputConfig.h  ChineseBtnConfig.h  ChineseDisplayConfig.h  ChineseInputConfig.h  ClockConfig.h  Color.h  ControlModel.h  CtrlID.h  DashboardConfig.h  DataRecipeConfig.h  DataSampleConfig.h  (+106 more)
HmiPart/Project/src/: AdvanceFuncRes.cpp  AlarmInfoRes.cpp  BaseBuilderCls.cpp  BtnFunctionRes.cpp  CHirePurchase.cpp  DataTableUnit.cpp  DataVarInfo.cpp  HMIProject.cpp  ImageResId.cpp  JudgeCondition.cpp  NoticesAction.cpp  OperatorChartConfig.cpp  OperatorRecordConfig.cpp  ProjectDataTables.cpp  ProjectDevice.cpp  ProjectInfo.cpp  ProjectMacros.cpp  ProjectPages.cpp  ProjectPortVarsInfo.cpp  ProjectResources.cpp  ProjectSetting.cpp  ProjectSystemSet.cpp  RecipeInfoRes.cpp  ReportChannel.cpp  SampleInfoRes.cpp  ScaleInfo.cpp  StatusRes.cpp  StringStyle.cpp  TrendChannel.cpp  XYLineChannel.cpp
HmiPart/Service/DataClient/: CMakeLists.txt  DataClient.vcxproj  DataClient.vcxproj.filters
HmiPart/Service/DataClient/include/: ClientBaseVar.h  ClientServer.h  ClientSession.h  CommandMgr.h  DataClient.h  IDaAppCB.h  NolockFifo.h  PackageMgr.h
HmiPart/Service/DataService/: CMakeLists.txt  DataService.vcxproj  DataService.vcxproj.filters
HmiPart/Service/DataService/include/: CommStateMgr.h  DataApi.h  DataCache.h  DataFrame.h  DataService.h  DataSwap.h  DeviceDataRequest.h  LocalSysDataCache.h  Observer.h  SysDataRequest.h
HmiPart/Service/HmiStorageService/: CMakeLists.txt  HmiStorageService.vcxproj  HmiStorageService.vcxproj.filters
HmiPart/Service/HmiStorageService/include/: AlarmRecord.h  AlarmStorage.h  AlarmStorageService.h  BaseRecord.h  BaseStorage.h  BaseStorageService.h  FileSave.h  HistoryRecord.h  HistoryStorage.h  IStorageService.h  Iterator.h  OperatorRecord.h  OperatorStorage.h  OperatorStorageService.h  RecipeStorage.h  RecipeStorageService.h  RingBuffer.h  SampleRecord.h  SampleStorage.h  SampleStorageService.h  StorageServiceFactory.h  StorageServiceImpl.h  XJRecord.h  XJRingBuffer.h
HmiPart/Service/HmiStorageService/src/: AlarmStorage.cpp  AlarmStorageService.cpp  BaseStorage.cpp  BaseStorageService.cpp  FileSave.cpp  OperatorStorage.cpp  OperatorStorageService.cpp  RecipeStorage.cpp  RecipeStorageService.cpp  SampleStorage.cpp  SampleStorageService.cpp  StorageServiceImpl.cpp
HmiPart/Service/XJSocket/: CMakeLists.txt  XJSocket.vcxproj  XJSocket.vcxproj.filters
HmiPart/Service/XJSocket/include/: LinuxSocketClient.h  LinuxSocketClientMulti.h  LinuxSocketServer.h  WinSocketClient.h  WinSocketClientMulti.h  WinSocketServer.h  (+4 more)
HmiPart/UIControl/: CMakeLists.txt  UIControl.vcxproj  UIControl.vcxproj.filters
HmiPart/UIControl/include/: AdvanceFuncGControl.h  AdvanceFuncGModel.h  AdvancedGraphic.h  AlarmBarControl.h  AlarmBarModel.h  AlarmBarView.h  AlarmDisplayControl.h  AlarmDisplayModel.h  AlarmDisplayView.h  AlarmGControl.h  AlarmGModel.h  AlarmGView.h  AlarmInputControl.h  AlarmInputModel.h  AlarmInputView.h  AlarmWinControl.h  AlarmWinModel.h  AlarmWinView.h  BackLightControl.h  BackLightModel.h  BackLightView.h  BarCodeControl.h  BarCodeModel.h  BarCodeView.h  BtnFunctionControl.h  BtnFunctionModel.h  BtnFunctionView.h  BtnPilotLampControl.h  BtnPilotLampModel.h  BtnPilotLampView.h  BtnTriggleControl.h  BtnTriggleModel.h  BtnTriggleView.h  BuzzerControl.h  BuzzerModel.h  BuzzerView.h  CharacterDisplayControl.h  CharacterDisplayModel.h  CharacterDisplayView.h  CharacterInputControl.h  (+205 more)
HmiPart/UIControl/src/: ControlFactory.cpp  PageFactory.cpp  PinYinWindow.cpp
OSLayer/System/: .gitignore  CMakeLists.txt  README.md  System.sln  System.vcxproj  System.vcxproj.filters
OSLayer/System/include/: SysCtrlApi.h  SysDateTime.h  SysFile.h  System.h  SystemInfo.h
OSLayer/System/src/: SysCtrlApi.cpp  SysDateTime.cpp  SysFile.cpp  System.cpp  SystemInfo.cpp  main.cpp
(+2802 files in other folders)
